# dpdk-stable

config/: common_base
drivers/net/: Makefile  meson.build
drivers/net/qdma/: meson.build  qdma.h  qdma_ethdev.c  qdma_vf_ethdev.c
lib/librte_eal/common/: eal_common_fbarray.c
lib/librte_eal/linux/eal/: eal.c  eal_hugepage_info.c  eal_memalloc.c  eal_memory.c
mk/: rte.app.mk
usertools/: dpdk-devbind.py
