# SPDX-License-Identifier: BSD-3-Clause
# Copyright(c) 2017 Intel Corporation


sources = files(
	'qdma_ethdev.c',
	'qdma_vf_ethdev.c',
	'qdma_devops.c',
	'qdma_common.c',
	'qdma_rxtx.c',
	'qdma_xdebug.c',
	'qdma_user.c',
	'qdma_access/qdma_access.c',
	'qdma_access/qdma_list.c',
	'qdma_access/qdma_resource_mgmt.c',
	'qdma_access/qdma_mbox_protocol.c',
	'qdma_access/qdma_access_common.c',
	'qdma_access/qdma_cpm_access.c',
	'qdma_access/qdma_reg_dump.c',
	'qdma_mbox.c',
	'qdma_platform.c',
	'rte_pmd_qdma.c'
)

includes += include_directories('qdma_access')

